--- a/src/+app/+discover/discover.component.html
+++ b/src/+app/+discover/discover.component.html
@@ -3,14 +3,17 @@
   <article>
     <section>
       <h1 class="sr-only">What's new at Stitch?</h1>
-      <ul class="slider-contain" data-slick="{'slidesToShow': 4, 'slidesToScroll': 4}">
-        <li><h3>1</h3></li>
-        <li><h3>2</h3></li>
-        <li><h3>3</h3></li>
-        <li><h3>4</h3></li>
-        <li><h3>5</h3></li>
-        <li><h3>6</h3></li>
-      </ul>
+      <div class="swiper-main">
+        <ul class="swiper-wrapper">
+          <li class="swiper-slide"><h3>1</h3></li>
+          <li class="swiper-slide"><h3>2</h3></li>
+          <li class="swiper-slide"><h3>3</h3></li>
+          <li class="swiper-slide"><h3>4</h3></li>
+          <li class="swiper-slide"><h3>5</h3></li>
+          <li class="swiper-slide"><h3>6</h3></li>
+        </ul>
+        <div class="swiper-pagination"></div>
+      </div>
     </section>
   </article>
 </section>
