--- a/src/+app/+discover/discover.component.html
+++ b/src/+app/+discover/discover.component.html
@@ -19,8 +19,8 @@
 </section>
 <section class="container">
   <h5>Explore</h5>
-  <main class="card-deck">
-    <div class="card" style="flex-grow:2;">
+  <main class="row">
+    <div class="card col-md-6">
       <img class="card-img" src="https://placehold.it/450x150" alt="Card image">
       <div class="card-img-overlay">
         <h4 class="card-title">Card title</h4>
@@ -28,7 +28,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-    <div class="card">
+    <div class="card col-md-3">
       <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
@@ -36,7 +36,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-    <div class="card">
+    <div class="card col-md-3">
       <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
@@ -48,8 +48,8 @@
 </section>
 <section class="container">
   <h5>Recommended</h5>
-  <main class="card-deck">
-    <div class="card">
+  <main class="row">
+    <div class="card col-md-3">
       <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
@@ -57,7 +57,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-    <div class="card">
+    <div class="card col-md-3">
       <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
@@ -65,7 +65,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-    <div class="card">
+    <div class="card col-md-3">
       <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
@@ -73,7 +73,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-    <div class="card">
+    <div class="card col-md-3">
       <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Card title</h4>
