--- a/src/+app/+discover/discover.component.html
+++ b/src/+app/+discover/discover.component.html
@@ -1,18 +1,21 @@
+<ul>
+  <li *ngFor="let project of projects">{{project.name}}</li>
+</ul>
+
 <section>
   <h1 class="sr-only">Explore Stitch</h1>
   <article>
     <section>
       <h1 class="sr-only">What's new at Stitch?</h1>
-      <div class="swiper-main">
+      <div class="swiper-container swiper-main">
         <ul class="swiper-wrapper">
           <li class="swiper-slide"><h3>1</h3></li>
           <li class="swiper-slide"><h3>2</h3></li>
           <li class="swiper-slide"><h3>3</h3></li>
           <li class="swiper-slide"><h3>4</h3></li>
           <li class="swiper-slide"><h3>5</h3></li>
-          <li class="swiper-slide"><h3>6</h3></li>
         </ul>
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination swiper-main-pagination"></div>
       </div>
     </section>
   </article>
@@ -20,65 +23,128 @@
 <section class="container">
   <h5>Explore</h5>
   <main class="row">
-    <div class="card col-md-6">
-      <img class="card-img" src="https://placehold.it/450x150" alt="Card image">
-      <div class="card-img-overlay">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
+    <div class="col-md-9 swiper-container swiper-explore">
+      <ul class="swiper-wrapper">
+        <li class="swiper-slide">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="card">
+                <img class="card-img" src="https://placehold.it/555x320" alt="Card image">
+                <div class="card-img-overlay">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <img class="card-img-top" src="https://placehold.it/262x140" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="swiper-slide">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="card">
+                <img class="card-img" src="https://placehold.it/555x320" alt="Card image">
+                <div class="card-img-overlay">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <img class="card-img-top" src="https://placehold.it/262x140" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="swiper-slide">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="card">
+                <img class="card-img" src="https://placehold.it/555x320" alt="Card image">
+                <div class="card-img-overlay">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <img class="card-img-top" src="https://placehold.it/262x140" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
-    <div class="card col-md-3">
-      <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card col-md-3">
-      <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
+    <div class="col-md-3">
+      <div class="swiper-pagination swiper-explore-pagination"></div>
     </div>
   </main>
 </section>
 <section class="container">
   <h5>Recommended</h5>
   <main class="row">
-    <div class="card col-md-3">
-      <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="col-md-3">
+      <div class="card">
+        <img class="card-img-top" src="https://placehold.it/262x140" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
       </div>
     </div>
-    <div class="card col-md-3">
-      <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="col-md-3">
+      <div class="card">
+        <img class="card-img-top" src="https://placehold.it/262x140" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
       </div>
     </div>
-    <div class="card col-md-3">
-      <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="col-md-3">
+      <div class="card">
+        <img class="card-img-top" src="https://placehold.it/262x140" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
       </div>
     </div>
-    <div class="card col-md-3">
-      <img class="card-img-top" src="https://placehold.it/450x150" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="col-md-3">
+      <div class="card">
+        <img class="card-img-top" src="https://placehold.it/262x140" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
       </div>
     </div>
   </main>
