--- a/src/+app/app.component.css
+++ b/src/+app/app.component.css
@@ -1,4 +1,4 @@
-main {min-height: calc(100vh - 327px);background:#ecf0f1}
+main {min-height: calc(100vh - 327px);background:#fff;}
 
 footer {padding:40px 0;background:#011627;color:#fff;}
 
