--- a/src/+app/+auth/login/login.component.html
+++ b/src/+app/+auth/login/login.component.html
@@ -18,19 +18,19 @@
   <button
     type="submit"
     class="btn btn-default"
-    (click)="_auth.login(username.value, password.value)">
+    (click)="login(username.value, password.value)">
       Log In
   </button>
   <button
     type="submit"
     class="btn btn-default"
-    (click)="_auth.signup(username.value, password.value)">
+    (click)="signup(username.value, password.value)">
       Sign Up
   </button>
   <button
     type="button"
     class="btn btn-default btn-primary"
-    (click)="_auth.loginWithGoogle()">
+    (click)="loginWithGoogle()">
       Log In with Google
   </button>
 </form>
