--- a/src/+app/+auth/signup/signup.component.html
+++ b/src/+app/+auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <section class="container-fluid">
-  <h1 class="sr-only">Log In</h1>
+  <h1 class="sr-only">Sign Up</h1>
   <div class="row">
     <article class="col-sm-12 col-md-6 col-lg-4">
       <form>
@@ -11,7 +11,7 @@
           <label for="name">Password</label>
           <input  type="password" class="form-control" #password placeholder="$up3r$3cr3tp@$$w0rd">
         </div>
-        <button type="submit" class="btn btn-default" (click)="login(username.value, password.value)">
+        <button type="submit" class="btn btn-default" (click)="signup(username.value, password.value)">
             Log In
         </button>
         <button type="button" class="btn btn-default btn-primary" (click)="loginWithGoogle()">
