Update auth views.

--- a/src/+app/shared/components/nav/nav.component.html
+++ b/src/+app/shared/components/nav/nav.component.html
@@ -19,7 +19,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding: 0 7px;">
           <li><button type="button" class="btn navbar-btn navbar-btn-icon navbar-btn-icon-bell active">
-            <i class="icon-bell" style="font-size: 18px;" routerLink="search"></i>
+            <i class="icon-bell" style="font-size: 18px;"></i>
             <span class="sr-only">Notifications</span>
           </button></li>
         </ul>
@@ -31,7 +31,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding: 0 7px;">
           <li><button type="button" class="btn navbar-btn navbar-btn-icon">
-            <i class="icon-search" style="font-size: 18px;"></i>
+            <i class="icon-search" style="font-size: 18px;" routerLink="search"></i>
             <span class="sr-only">Search...</span>
           </button></li>
         </ul>
