--- a/src/+app/+auth/login/login.component.html
+++ b/src/+app/+auth/login/login.component.html
@@ -1,25 +1,39 @@
 <section class="container-fluid">
   <h1 class="sr-only">Log In</h1>
   <div class="row">
-    <article class="col-sm-12 col-md-6 col-lg-4">
-      <form>
-        <div class="form-group">
-          <label for="name">Username</label>
-          <input type="text" class="form-control" #username placeholder="awesome@email.com">
+    <article class="col-sm-12 col-md-6 col-lg-5">
+      <section class="form-contain">
+        <div class="logo-contain">
+          <a class="logo" routerLink="discover">
+            <span class="sr-only">Stitch</span>
+          </a>
         </div>
-        <div class="form-group">
-          <label for="name">Password</label>
-          <input  type="password" class="form-control" #password placeholder="$up3r$3cr3tp@$$w0rd">
-        </div>
-        <button type="submit" class="btn btn-default" (click)="login(username.value, password.value)">
-            Log In
-        </button>
-        <button type="button" class="btn btn-default btn-primary" (click)="loginWithGoogle()">
-            Log In with Google
-        </button>
-      </form>
+        <form>
+          <div class="form-group">
+            <label for="username" class="sr-only">Username</label>
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-user"></i></div>
+              <input type="text" class="form-control" name="username" #username placeholder="awesome@email.com">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="password" class="sr-only">Password</label>
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-lock"></i></div>
+              <input type="password" class="form-control" name="password" #password placeholder="$up3r$3cr3tp@$$w0rd">
+            </div>
+          </div>
+          <button type="submit" class="btn btn-default btn-block" (click)="login(username.value, password.value)">
+              Log In
+          </button>
+          <button type="button" class="btn btn-default btn-primary btn-block" (click)="loginWithGoogle()">
+              Log In with Google
+          </button>
+        </form>
+        <a class="nav-text" routerLink="signup">Don't have an account? Sign up here.</a>
+      </section>
     </article>
-    <aside class="hidden-sm col-md-6 col-lg-8">
+    <aside class="hidden-sm col-md-6 col-lg-7">
       <ul>
         <li>Slide</li>
       </ul>
