--- a/src/+app/+auth/signup/signup.component.html
+++ b/src/+app/+auth/signup/signup.component.html
@@ -12,8 +12,8 @@
           <div class="form-group">
             <label for="username" class="sr-only">Username</label>
             <div class="input-group">
-              <div class="input-group-addon"><i class="icon-user"></i></div>
-              <input type="text" class="form-control" name="username" #username placeholder="awesome@email.com">
+              <div class="input-group-addon"><i class="icon-mail"></i></div>
+              <input type="email" class="form-control" name="email" #username placeholder="awesome@email.com">
             </div>
           </div>
           <div class="form-group">
