--- a/src/+app/shared/components/nav/nav.component.html
+++ b/src/+app/shared/components/nav/nav.component.html
@@ -13,17 +13,20 @@
         </a>
       </div>
       <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding-left: 25px;">
+        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding-left: 25px;" *ngIf="!_auth.isAuthenticated()">
           <li><button type="button" class="btn btn-primary navbar-btn" routerLink="signup">Sign up</button></li>
           <li><button type="button" class="btn navbar-btn" routerLink="login">Log in</button></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding: 0 7px;">
+        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding-left: 25px;" *ngIf="_auth.isAuthenticated()">
+          <li><button type="button" class="btn navbar-btn" (click)="_auth.logout()">Sign out</button></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding: 0 7px;" *ngIf="_auth.isAuthenticated()">
           <li><button type="button" class="btn navbar-btn navbar-btn-icon navbar-btn-icon-bell active">
             <i class="icon-bell" style="font-size: 18px;"></i>
             <span class="sr-only">Notifications</span>
           </button></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding: 0 7px;">
+        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid #eee;padding: 0 7px;" *ngIf="_auth.isAuthenticated()">
           <li><button type="button" class="btn navbar-btn navbar-btn-icon navbar-btn-icon-message active">
             <i class="icon-message" style="font-size: 18px;"></i>
             <span class="sr-only">Messages</span>
