Refactor auth to reactive forms.

--- a/src/+app/shared/components/footer/footer.component.html
+++ b/src/+app/shared/components/footer/footer.component.html
@@ -37,7 +37,7 @@
         </div>
       </nav>
       <div class="col-xs-12 col-md-5" style="padding:0 0 0 40px;">
-        <form>
+        <form [formGroup]="newsletterForm">
           <h3 style="margin-bottom:20px;">Join our newsletter</h3>
           <div class="input-group">
             <input type="email" class="form-control" placeholder="awesome@email.com">
