--- a/src/+app/+auth/login/login.component.html
+++ b/src/+app/+auth/login/login.component.html
@@ -8,27 +8,27 @@
             <span class="sr-only">Stitch</span>
           </a>
         </div>
-        <form>
+        <button type="button" class="btn btn-default btn-primary btn-block" (click)="loginWithGoogle()">
+          Log In with Google
+        </button>
+        <form [formGroup]="loginForm" (ngSubmit)="login(loginForm)">
           <div class="form-group">
-            <label for="username" class="sr-only">Username</label>
+            <label for="username" class="sr-only">Email Address</label>
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-mail"></i></div>
-              <input type="email" class="form-control" name="email" #username placeholder="awesome@email.com">
+              <input type="email" class="form-control" name="email" formControlName="email" placeholder="awesome@email.com" required>
+              <!--span class="help-block text-danger" *ngIf="formErrors.email">{{ formErrors.email }}</span>-->
             </div>
           </div>
           <div class="form-group">
             <label for="password" class="sr-only">Password</label>
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-lock"></i></div>
-              <input type="password" class="form-control" name="password" #password placeholder="$up3r$3cr3tp@$$w0rd">
+              <input type="password" class="form-control" name="password" formControlName="password" placeholder="$up3r$3cr3tp@$$w0rd" required>
+              <!--<span class="help-block text-danger" *ngIf="formErrors.password">{{ formErrors.password }}</span>-->
             </div>
           </div>
-          <button type="submit" class="btn btn-default btn-block" (click)="login(username.value, password.value)">
-              Log In
-          </button>
-          <button type="button" class="btn btn-default btn-primary btn-block" (click)="loginWithGoogle()">
-              Log In with Google
-          </button>
+          <button type="submit" class="btn btn-default btn-block" [disabled]="!loginForm.valid">Log In</button>
         </form>
         <a class="nav-text" routerLink="signup">Don't have an account? Sign up here.</a>
       </section>
