--- a/src/+app/+auth/signup/signup.component.html
+++ b/src/+app/+auth/signup/signup.component.html
@@ -1,4 +1,4 @@
-<section class="container-fluid">
+<section class="container-fluid signup-contain">
   <h1 class="sr-only">Sign Up</h1>
   <div class="row">
     <article class="col-sm-12 col-md-6 col-lg-5">
@@ -11,9 +11,9 @@
         <button type="button" class="btn btn-default btn-primary btn-block" (click)="loginWithGoogle()">
           Log In with Google
         </button>
-        <form [formGroup]="signupForm" (ngSubmit)="signup(signupForm)">
+        <form [formGroup]="signupForm" (ngSubmit)="signup()">
           <div class="form-group">
-            <label for="username" class="sr-only">Username</label>
+            <label for="email" class="sr-only">Username</label>
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-mail"></i></div>
               <input type="email" class="form-control" name="email" formControlName="email" placeholder="awesome@email.com" required>
@@ -28,8 +28,8 @@
               <!--<span class="help-block text-danger" *ngIf="formErrors.password">{{ formErrors.password }}</span>-->
             </div>
           </div>
-          <button type="submit" class="btn btn-default btn-block" [disabled]="!signupForm.valid">Log In</button>
-          <a class="nav-text" routerLink="login">Already have an account? Sign in here.</a>
+          <button type="submit" class="btn btn-default btn-block" [disabled]="!signupForm.valid">Sign up</button>
+          <a class="nav-text" routerLink="/login">Already have an account? Sign in here.</a>
         </form>
       </section>
     </article>
