--- a/src/+app/+auth/signup/signup.component.css
+++ b/src/+app/+auth/signup/signup.component.css
@@ -1,6 +1,12 @@
-article {position: relative;height: 100vh;box-shadow: 3px 0 6px rgba(0,0,0,0.16), 3px 0 6px rgba(0,0,0,0.23);}
+article {position: relative;height: 100vh;box-shadow: 3px 0 6px rgba(0,0,0,0.16), 3px 0 6px rgba(0,0,0,0.23);z-index: 5;}
+
+aside {height: 100vh;background-color: #ccc}
 
 input {border:0px solid transparent;background: transparent;}
+
+.signup-contain {overflow: hidden;}
+
+.logo {display: block;width: 100%;height: 75px; background:transparent url('https://cdn.heystitch.io/web/common/images/logos/logotype-web.png') no-repeat center center;background-size: contain;}
 
 .form-contain {position: absolute;top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);  min-width:300px; max-width: 600px;}
 
