--- a/src/+app/+auth/login/login.component.html
+++ b/src/+app/+auth/login/login.component.html
@@ -4,7 +4,7 @@
     <article class="col-sm-12 col-md-6 col-lg-5">
       <section class="form-contain">
         <div class="logo-contain">
-          <a class="logo" routerLink="discover">
+          <a class="logo" routerLink="/discover">
             <span class="sr-only">Stitch</span>
           </a>
         </div>
