--- a/src/+app/+auth/login/login.component.html
+++ b/src/+app/+auth/login/login.component.html
@@ -13,7 +13,7 @@
         </button>
         <form [formGroup]="loginForm" (ngSubmit)="login()">
           <div class="form-group">
-            <label for="email" class="sr-only">Username</label>
+            <label for="email" class="sr-only">Email Address</label>
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-mail"></i></div>
               <input type="email" class="form-control" name="email" formControlName="email" placeholder="awesome@email.com" required>
@@ -28,7 +28,7 @@
               <!--<span class="help-block text-danger" *ngIf="formErrors.password">{{ formErrors.password }}</span>-->
             </div>
           </div>
-          <button type="submit" class="btn btn-default btn-block">Log in</button>
+          <button type="submit" class="btn btn-default btn-block" [disabled]="!loginForm.valid">Log in</button>
         </form>
         <a class="nav-text" routerLink="/signup">Don't have an account? Sign up here.</a>
       </section>
