--- a/src/+app/+auth/signup/signup.component.html
+++ b/src/+app/+auth/signup/signup.component.html
@@ -13,7 +13,7 @@
         </button>
         <form [formGroup]="signupForm" (ngSubmit)="signup()">
           <div class="form-group">
-            <label for="email" class="sr-only">Username</label>
+            <label for="email" class="sr-only">Email Address</label>
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-mail"></i></div>
               <input type="email" class="form-control" name="email" formControlName="email" placeholder="awesome@email.com" required>
@@ -29,8 +29,8 @@
             </div>
           </div>
           <button type="submit" class="btn btn-default btn-block" [disabled]="!signupForm.valid">Sign up</button>
-          <a class="nav-text" routerLink="/login">Already have an account? Sign in here.</a>
         </form>
+        <a class="nav-text" routerLink="/login">Already have an account? Sign in here.</a>
       </section>
     </article>
     <aside class="hidden-sm col-md-6 col-lg-7">
