--- a/src/+app/+auth/components/login/login.component.html
+++ b/src/+app/+auth/components/login/login.component.html
@@ -1,5 +1,6 @@
-<section class="container-fluid signup-contain">
-  <h1 class="sr-only">Sign Up</h1>
+<section class="container-fluid login-contain">
+  {{ user }}
+  <h1 class="sr-only">Log In</h1>
   <div class="row">
     <article class="col-sm-12 col-md-6 col-lg-5">
       <section class="form-contain">
@@ -11,7 +12,7 @@
         <button type="button" class="btn btn-default btn-primary btn-block" (click)="loginWithGoogle()">
           Log In with Google
         </button>
-        <form [formGroup]="signupForm" (ngSubmit)="signup()">
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
           <div class="form-group">
             <label for="email" class="sr-only">Email Address</label>
             <div class="input-group">
@@ -28,9 +29,9 @@
               <!--<span class="help-block text-danger" *ngIf="formErrors.password">{{ formErrors.password }}</span>-->
             </div>
           </div>
-          <button type="submit" class="btn btn-default btn-block" [disabled]="!signupForm.valid">Sign up</button>
+          <button type="submit" class="btn btn-default btn-block" [disabled]="!loginForm.valid">Log in</button>
         </form>
-        <a class="nav-text" routerLink="/login">Already have an account? Sign in here.</a>
+        <a class="nav-text" routerLink="/signup">Don't have an account? Sign up here.</a>
       </section>
     </article>
     <aside class="hidden-sm col-md-6 col-lg-7">
