--- a/src/+app/+auth/components/signup/signup.component.html
+++ b/src/+app/+auth/components/signup/signup.component.html
@@ -1,4 +1,4 @@
-<section class="container-fluid signup-contain">
+<section class="container-fluid auth-contain">
   <h1 class="sr-only">Sign Up</h1>
   <div class="row">
     <article class="col-sm-12 col-md-6 col-lg-5">
@@ -8,16 +8,12 @@
             <span class="sr-only">Stitch</span>
           </a>
         </div>
-        <button type="button" class="btn btn-default btn-primary btn-block" (click)="loginWithGoogle()">
-          Log In with Google
-        </button>
         <form [formGroup]="signupForm" (ngSubmit)="signup()">
           <div class="form-group">
             <label for="username" class="sr-only">Username</label>
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-user"></i></div>
               <input type="text" class="form-control" name="username" formControlName="username" placeholder="AwesomeUser99" required>
-              <!--<span class="help-block text-danger" *ngIf="formErrors.username">{{ formErrors.username }}</span>-->
             </div>
           </div>
           <div class="form-group">
@@ -25,7 +21,6 @@
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-mail"></i></div>
               <input type="email" class="form-control" name="email" formControlName="email" placeholder="awesome@email.com" required>
-              <!--<span class="help-block text-danger" *ngIf="formErrors.email">{{ formErrors.email }}</span>-->
             </div>
           </div>
           <div class="form-group">
@@ -33,10 +28,15 @@
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-lock"></i></div>
               <input type="password" class="form-control" name="password" formControlName="password" placeholder="$up3r$3cr3tp@$$w0rd" required>
-              <!--<span class="help-block text-danger" *ngIf="formErrors.password">{{ formErrors.password }}</span>-->
             </div>
           </div>
-          <button type="submit" class="btn btn-default btn-block" [disabled]="!signupForm.valid">Sign up</button>
+          <div class="error-block">
+            <p class="help-block text-danger" *ngIf="signupError">{{ signupError }}</p>
+            <!--<p class="help-block text-danger" *ngIf="formErrors.username">{{ formErrors.username }}</p>-->
+            <!--<p class="help-block text-danger" *ngIf="formErrors.email">{{ formErrors.email }}</p>-->
+            <!--<p class="help-block text-danger" *ngIf="formErrors.password">{{ formErrors.password }}</p>-->
+          </div>
+          <button type="submit" class="btn btn-default btn-block">Sign up</button>
         </form>
         <a class="nav-text" routerLink="/login">Already have an account? Sign in here.</a>
       </section>
