--- a/src/+app/+auth/components/login/login.component.html
+++ b/src/+app/+auth/components/login/login.component.html
@@ -8,6 +8,9 @@
             <span class="sr-only">Stitch</span>
           </a>
         </div>
+        <div *ngIf="error">
+          <h3>{{ error }}</h3>
+        </div>
         <form [formGroup]="loginForm" (ngSubmit)="login()">
           <div class="form-group">
             <label for="email" class="sr-only">Email Address</label>
@@ -24,7 +27,6 @@
             </div>
           </div>
           <div class="error-block">
-            <p class="help-block text-danger" *ngIf="loginError">{{ loginError }}</p>
             <!--<p class="help-block text-danger" *ngIf="formErrors.email">{{ formErrors.email }}</p>-->
             <!--<p class="help-block text-danger" *ngIf="formErrors.password">{{ formErrors.password }}</p>-->
           </div>
