Working auth signup!.

--- a/src/+app/+auth/components/login/login.component.html
+++ b/src/+app/+auth/components/login/login.component.html
@@ -3,6 +3,7 @@
   <div class="row">
     <article class="col-sm-12 col-md-6 col-lg-5">
       <section class="form-contain">
+        {{ currentUser.email }}
         <div class="logo-contain">
           <a class="logo" routerLink="/discover">
             <span class="sr-only">Stitch</span>
